abduction/src/main/java/uk/co/mtford/jalp/abduction/parse/program/JALPParser.java
/* Generated By:JavaCC: Do not edit this line. JALPParser.java */
package uk.co.mtford.jalp.abduction.parse.program;

import java.io.ByteArrayInputStream;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.util.HashMap;
import java.util.LinkedList;
import java.util.List;
import uk.co.mtford.jalp.abduction.AbductiveFramework;
import uk.co.mtford.jalp.abduction.logic.instance.IInferableInstance;
import uk.co.mtford.jalp.abduction.logic.instance.DenialInstance;
import uk.co.mtford.jalp.abduction.logic.instance.constraints.*;
import uk.co.mtford.jalp.abduction.logic.instance.equalities.EqualityInstance;
import uk.co.mtford.jalp.abduction.Definition;
import uk.co.mtford.jalp.abduction.logic.instance.*;
import uk.co.mtford.jalp.abduction.logic.instance.term.ConstantListInstance;
import uk.co.mtford.jalp.abduction.logic.instance.term.IntegerListInstance;
import uk.co.mtford.jalp.abduction.logic.instance.term.ListInstance;
import uk.co.mtford.jalp.abduction.logic.instance.term.*;

public class JALPParser implements JALPParserConstants {

    public static AbductiveFramework readFromConsole() throws ParseException {
        JALPParser parser = new JALPParser(System.in);
        return parser.AbductiveLogicProgram();
    }

    public static AbductiveFramework readFromFile(String fileName) throws FileNotFoundException, ParseException {
        FileInputStream fstream = new FileInputStream(fileName);
        JALPParser parser = new JALPParser(fstream);
        return parser.AbductiveLogicProgram();
    }

      public static AbductiveFramework readFromString(String string) throws ParseException {
        ByteArrayInputStream inputStream = null;
        byte[] buf = string.getBytes();
        inputStream = new ByteArrayInputStream(buf);
        JALPParser parser = new JALPParser(inputStream);
        return parser.AbductiveLogicProgram();
      }

/* Top level production */
  final public AbductiveFramework AbductiveLogicProgram() throws ParseException {
        LinkedList<Definition> program = new LinkedList<Definition>();
    LinkedList<DenialInstance> listConstraints = new LinkedList<DenialInstance>();
    HashMap<String, Integer> abducibles = new HashMap<String, Integer>();

    Definition r;
    DenialInstance d;
    List<PredicateInstance> newAbducibles;
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(2)) {
        r = Rule();
            program.add(r);
      } else if (jj_2_3(2)) {
        d = Denial();
          listConstraints.add(d);
      } else if (jj_2_4(2)) {
        newAbducibles = Abducible();
            for (PredicateInstance p:newAbducibles) {
                abducibles.put(p.getName(),p.getNumParams());
            }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(0);
        {if (true) return new AbductiveFramework(program,abducibles,listConstraints);}
    throw new Error("Missing return statement in function");
  }

  final public Definition Rule() throws ParseException {
    HashMap<String, VariableInstance> variablesSoFar = new HashMap<String, VariableInstance>();

    PredicateInstance head;
    List<IInferableInstance> body = null;
    head = Predicate(variablesSoFar);
    if (jj_2_5(2)) {
      jj_consume_token(DEFINES);
      body = Body(variablesSoFar);
    } else {
      ;
    }
    jj_consume_token(DOT);
      {if (true) return new Definition(head,body,variablesSoFar);}
    throw new Error("Missing return statement in function");
  }

  final public DenialInstance Denial() throws ParseException {
    HashMap<String, VariableInstance> variablesSoFar = new HashMap<String, VariableInstance>();

    List<IInferableInstance> body;
    List<VariableInstance> variableList = new LinkedList<VariableInstance>();
    jj_consume_token(IC);
    jj_consume_token(DEFINES);
    body = Body(variablesSoFar);
    jj_consume_token(DOT);
        for (VariableInstance v:variablesSoFar.values()) {
            variableList.add(v);
        }
        DenialInstance d = new DenialInstance(body,variableList);
        {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

  final public List<IInferableInstance> Body(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    LinkedList<IInferableInstance> body = new LinkedList<IInferableInstance>();
    IInferableInstance inferable;
    inferable = Inferable(variablesSoFar);
      body.add(inferable);
    label_2:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      inferable = Inferable(variablesSoFar);
          body.add(inferable);
    }
      {if (true) return body;}
    throw new Error("Missing return statement in function");
  }

  final public List<PredicateInstance> Abducible() throws ParseException {
    LinkedList<PredicateInstance> predicateList = new LinkedList<PredicateInstance>();
    PredicateInstance p;
    jj_consume_token(ABDUCIBLE);
    jj_consume_token(LBRACKET);
    p = Predicate(new HashMap<String, VariableInstance>());
      predicateList.add(p);
    label_3:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(COMMA);
      p = Predicate(new HashMap<String, VariableInstance>());
          predicateList.add(p);
    }
    jj_consume_token(RBRACKET);
    jj_consume_token(DOT);
      {if (true) return predicateList;}
    throw new Error("Missing return statement in function");
  }

  final public IInferableInstance Inferable(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    IInferableInstance inferable;
    if (jj_2_8(2)) {
      inferable = PositiveInferable(variablesSoFar);
      {if (true) return inferable;}
    } else if (jj_2_9(2)) {
      inferable = NegativeInferable(variablesSoFar);
      {if (true) return inferable;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public IInferableInstance PositiveInferable(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    IInferableInstance inferable;
    if (jj_2_10(2)) {
      inferable = Predicate(variablesSoFar);
      {if (true) return inferable;}
    } else if (jj_2_11(2)) {
      inferable = Equality(variablesSoFar);
      {if (true) return inferable;}
    } else if (jj_2_12(2)) {
      inferable = Constraint(variablesSoFar);
      {if (true) return inferable;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public NegationInstance NegativeInferable(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    IInferableInstance subformula;
    jj_consume_token(NOT);
    subformula = PositiveInferable(variablesSoFar);
      {if (true) return new NegationInstance(subformula);}
    throw new Error("Missing return statement in function");
  }

  final public PredicateInstance Predicate(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    Token t;
    String name;
    List<IUnifiableAtomInstance> parameters = new LinkedList<IUnifiableAtomInstance>();
    t = jj_consume_token(LCASENAME);
      name = t.image;
    if (jj_2_13(2)) {
      jj_consume_token(LBRACKET);
      parameters = ParameterList(variablesSoFar);
      jj_consume_token(RBRACKET);
    } else {
      ;
    }
      {if (true) return new PredicateInstance(name,parameters);}
    throw new Error("Missing return statement in function");
  }

  final public EqualityInstance Equality(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    IUnifiableAtomInstance left;
    IUnifiableAtomInstance right;
    left = Parameter(variablesSoFar);
    jj_consume_token(EQUALS);
    right = Parameter(variablesSoFar);
      {if (true) return new EqualityInstance(left,right);}
    throw new Error("Missing return statement in function");
  }

  final public IConstraintInstance Constraint(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    IConstraintInstance instance;
    if (jj_2_14(2)) {
      instance = LessThanConstraint(variablesSoFar);
      {if (true) return instance;}
    } else if (jj_2_15(2)) {
      instance = LessThanEqConstraint(variablesSoFar);
      {if (true) return instance;}
    } else if (jj_2_16(2)) {
      instance = GreaterThanConstraint(variablesSoFar);
      {if (true) return instance;}
    } else if (jj_2_17(2)) {
      instance = GreaterThanEqConstraint(variablesSoFar);
      {if (true) return instance;}
    } else if (jj_2_18(2)) {
      instance = InListConstraint(variablesSoFar);
      {if (true) return instance;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LessThanConstraintInstance LessThanConstraint(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    ITermInstance left;
    ITermInstance right;
    left = Term(variablesSoFar);
    jj_consume_token(LESSTHAN);
    right = Term(variablesSoFar);
      {if (true) return new LessThanConstraintInstance(left,right);}
    throw new Error("Missing return statement in function");
  }

  final public LessThanEqConstraintInstance LessThanEqConstraint(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    ITermInstance left;
    ITermInstance right;
    left = Term(variablesSoFar);
    jj_consume_token(LESSTHANEQ);
    right = Term(variablesSoFar);
      {if (true) return new LessThanEqConstraintInstance(left,right);}
    throw new Error("Missing return statement in function");
  }

  final public GreaterThanConstraintInstance GreaterThanConstraint(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    ITermInstance left;
    ITermInstance right;
    left = Term(variablesSoFar);
    jj_consume_token(GREATERTHAN);
    right = Term(variablesSoFar);
      {if (true) return new GreaterThanConstraintInstance(left,right);}
    throw new Error("Missing return statement in function");
  }

  final public GreaterThanEqConstraintInstance GreaterThanEqConstraint(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    ITermInstance left;
    ITermInstance right;
    left = Term(variablesSoFar);
    jj_consume_token(GREATERTHANEQ);
    right = Term(variablesSoFar);
      {if (true) return new GreaterThanEqConstraintInstance(left,right);}
    throw new Error("Missing return statement in function");
  }

  final public InListConstraintInstance InListConstraint(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    ITermInstance left;
    ITermInstance right;
    left = Term(variablesSoFar);
    jj_consume_token(IN);
    if (jj_2_19(2)) {
      right = CharConstantList(variablesSoFar);
      {if (true) return new InConstantListConstraintInstance(left,(ConstantListInstance)right);}
    } else if (jj_2_20(2)) {
      right = IntegerConstantList(variablesSoFar);
      {if (true) return new InIntegerListConstraintInstance(left,(IntegerListInstance)right);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ITermInstance Term(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    ITermInstance term;
    if (jj_2_21(2)) {
      term = Variable(variablesSoFar);
      {if (true) return term;}
    } else if (jj_2_22(2)) {
      term = Constant();
      {if (true) return term;}
    } else if (jj_2_23(2)) {
      term = List(variablesSoFar);
      {if (true) return term;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List<IUnifiableAtomInstance> ParameterList(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    LinkedList<IUnifiableAtomInstance> params = new LinkedList<IUnifiableAtomInstance>();
    IUnifiableAtomInstance param;
    if (jj_2_25(2)) {
      param = Parameter(variablesSoFar);
          params.add(param);
      label_4:
      while (true) {
        if (jj_2_24(2)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(COMMA);
        param = Parameter(variablesSoFar);
              params.add(param);
      }
    } else {
      ;
    }
      {if (true) return params;}
    throw new Error("Missing return statement in function");
  }

  final public IUnifiableAtomInstance Parameter(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    IUnifiableAtomInstance unifiable;
    if (jj_2_26(2)) {
      unifiable = Variable(variablesSoFar);
          {if (true) return unifiable;}
    } else if (jj_2_27(2)) {
      unifiable = Constant();
          {if (true) return unifiable;}
    } else if (jj_2_28(2)) {
      unifiable = Predicate(variablesSoFar);
          {if (true) return unifiable;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ListInstance List(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
   ListInstance listInstance;
    if (jj_2_29(2)) {
      listInstance = IntegerConstantList(variablesSoFar);
      {if (true) return listInstance;}
    } else if (jj_2_30(2)) {
      listInstance = CharConstantList(variablesSoFar);
      {if (true) return listInstance;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public IntegerListInstance IntegerConstantList(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    IntegerListInstance listInstance = new IntegerListInstance();
    IntegerConstantInstance constantInstance;
    jj_consume_token(LSQBRACKET);
    constantInstance = IntegerConstant();
        listInstance.getList().add(constantInstance);
    label_5:
    while (true) {
      if (jj_2_31(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(COMMA);
      constantInstance = IntegerConstant();
           listInstance.getList().add(constantInstance);
    }
    jj_consume_token(RSQBRACKET);
      {if (true) return listInstance;}
    throw new Error("Missing return statement in function");
  }

  final public ConstantListInstance CharConstantList(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    ConstantListInstance listInstance = new ConstantListInstance();
    CharConstantInstance constantInstance;
    jj_consume_token(LSQBRACKET);
    constantInstance = CharConstant();
        listInstance.getList().add(constantInstance);
    label_6:
    while (true) {
      if (jj_2_32(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(COMMA);
      constantInstance = CharConstant();
           listInstance.getList().add(constantInstance);
    }
    jj_consume_token(RSQBRACKET);
      {if (true) return listInstance;}
    throw new Error("Missing return statement in function");
  }

  final public VariableInstance Variable(HashMap<String, VariableInstance> variablesSoFar) throws ParseException {
    Token t;
    String name;
    t = jj_consume_token(UCASENAME);
        name = t.image;
        if (variablesSoFar.containsKey(name)) {
            {if (true) return variablesSoFar.get(name);}
        }
        else {
            VariableInstance variable = new VariableInstance(name);
            variablesSoFar.put(name,variable);
            {if (true) return variable;}
        }
    throw new Error("Missing return statement in function");
  }

  final public ConstantInstance Constant() throws ParseException {
    ConstantInstance constantInstance;
    if (jj_2_33(2)) {
      constantInstance = IntegerConstant();
      {if (true) return constantInstance;}
    } else if (jj_2_34(2)) {
      constantInstance = CharConstant();
      {if (true) return constantInstance;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public IntegerConstantInstance IntegerConstant() throws ParseException {
    Token t;
    Integer integer;
    t = jj_consume_token(INTEGER);
        integer = Integer.parseInt(t.image);
        {if (true) return new IntegerConstantInstance(integer);}
    throw new Error("Missing return statement in function");
  }

  final public CharConstantInstance CharConstant() throws ParseException {
    Token t;
    String name;
    t = jj_consume_token(LCASENAME);
        name = t.image;
        {if (true) return new CharConstantInstance(name);}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }
